fix bug: select list overlapping View+Edit border in profiles

--- a/cms_frontend/css/custom.css
+++ b/cms_frontend/css/custom.css
@@ -1362,6 +1362,10 @@ left: 0;
 width: 100%;
 }
 
+.profile.well {
+margin-top: 30px;
+}
+
 .read-more {
 margin-left: 5px;
 font-size: 13px;
